# quick_sort

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TASK.md  graphic.py  main.cpp
include/: CMakeLists.txt  quick_sort.hpp
tests/: quick_sort_tests.cpp
